DTS-32208 review comment